<resources>
    <string name="app_name">Blutooth Image</string>
    <string name="main_label_status">Status :&nbsp;</string>
    <string name="not_connected">Not Connected</string>
    <string name="get_picture">Get Picture</string>
    <string name="connect">Connect</string>
    <string name="quality">Quality</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="main_image_content_description">Image Received via Bluetooth</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
    </string-array>

    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
</resources>
